transfer count for panel.